Box view- in members tab the invite friends need spacing (bug 2767)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Box3.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Box3.less
@@ -664,7 +664,7 @@
         .boxName {
             font-size: 15px;
             line-height: 30px;
-            padding-top: 191px; 
+            //padding-top: 191px; // 
         }
 
         .thumbItem, .listItem {
